W1:fix image and contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -8,7 +8,7 @@
   --paragraph-font: 'Roboto', serif;
 
   --nav-background-color: #4b555b;
-  --nav-link-color: #d7cfab;
+  --nav-link-color: #fdfdfd;
   --nav-hover-link-color: #f0a202;
 }
 
